Add HTTP transport option for MCP server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "click>=8.1.0",
     "python-dotenv>=1.0.0",
+    "uvicorn>=0.25.0",
 ]
 
 [project.optional-dependencies]
