--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ python-dotenv>=1.0.0
 # CLI support
 click>=8.1.0
 
+# HTTP server runtime for Streamable HTTP transport
+uvicorn>=0.25.0
+
 # Development and testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
