--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,6 +16,9 @@ services:
       - PYTHONUNBUFFERED=1
       
       # MCP Server Configuration
+      - MCP_TRANSPORT=${MCP_TRANSPORT:-http}
+      - MCP_HTTP_PORT=${MCP_HTTP_PORT:-8080}
+      - MCP_HTTP_HOST=${MCP_HTTP_HOST:-0.0.0.0}
       - MCP_SERVER_NAME=dolibarr-mcp
       - MCP_SERVER_VERSION=1.0.0
     
@@ -29,7 +32,7 @@ services:
     
     # Expose port for future HTTP interface
     ports:
-      - "8080:8080"
+      - "18004:8080"
     
     # Health check
     healthcheck:
